--- a/tex/header.tex
+++ b/tex/header.tex
@@ -12,7 +12,7 @@
 
 \vspace*{1cm}
 \begin{center}
-\huge{\bf Multi-view camera calibration} \\[0.5cm]
+\huge{\bf Multi-view camera recalibration} \\[0.5cm]
 {\Large MSc. Thesis VIBOT\\} \vspace{2cm} {\large
 Pablo Speciale\\
 \vspace{1cm}
