--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -22,6 +22,26 @@ RViz and Markers! Republish everytime!
 Why Ceres?
 
 
+\section{Fails and solutions}
+
+Explain why it fails
+\begin{figure}[!htbp]
+ \centering
+ \includegraphics[width=0.5\textwidth]{images/screenshots/optimization_failer02_2.png}
+ \caption{Initials versions}
+ \label{fig:optimization_failer}
+\end{figure}
+
+
+Triangulation fails... no solution in the moment of writing this thesis :( I couldn't find the bug
+\begin{figure}[!htbp]
+ \centering
+ \includegraphics[width=0.5\textwidth]{images/screenshots/triangulation_fails.png}
+ \caption{Triangulation fails, white dots}
+ \label{fig:triangulation_fails}
+\end{figure}
+
+
 
 
 \chapter{Extra work}
