--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -11,11 +11,13 @@ calibration is important because blahblah...
 
 TODO: Goals...
 
+* say here I will have a initial calibration and for this reason is (re)calibration...
+*
 
 
 \section{Thesis organization and methodology}
 
-The background will be distributed into chapters instead of having a big one, with the purpose of make the reading more natural. Then, this thesis will be split in two main sections (regarding background): firstly, a \textbf{theoretical background} will be explained in section~\ref{sec:theoretical_background}; secondly, a \textbf{technical background} in chapter~\ref{cha:technical_background}, where ROS (Robot Operating System) \cite{ROS}, RViz (ROS visualizer) \cite{RViz}, PR2 (Personal Robot 2, from Willow Garage) \cite{PR2}, KDL (Kinematics and Dynamics Library) \cite{KDL}, Ceres Solver (non-linear least squares minimizer) \cite{ceres}, and other infinity amount of tools will be briefly explained.
+The background will be distributed into chapters instead of having a big one, with the purpose of make the reading more natural. Then, this thesis will be split in two main sections (regarding background): first, a \textbf{theoretical background} will be explained in section~\ref{sec:theoretical_background}; second, a \textbf{technical background} in chapter~\ref{cha:technical_background}, where ROS (Robot Operating System) \cite{ROS}, RViz (ROS visualizer) \cite{RViz}, PR2 (Personal Robot 2, from Willow Garage) \cite{PR2}, KDL (Kinematics and Dynamics Library) \cite{KDL}, Ceres Solver (non-linear least squares minimizer) \cite{ceres}, and other infinity amount of tools will be briefly explained.
 
 Another strong division in this thesis is the use of \textbf{synthetic data} (chapter~\ref{cha:stereo_recalibration}) vs \textbf{real data} (chapter~\ref{cha:multi-view calibration}). Synthetic data has been used in stereo in order to \textbf{validate} the method (posteriorly generalized for more cameras), before endeavor a more complicated task with real data.
 
